@@ -64,6 +64,7 @@ hint mode. Then press [a]24[a] to copy the hint location.
 * |;V| [m]V[m] to view its destination source in the external editor
 * |;y| [m]y[m] to yank its destination location
 * |;Y| [m]Y[m] to yank its text description
+* |;c| [m]c[m] to open its context menu
 
 Hintable elements for all extended hint modes can be set in the
 'extendedhinttags' XPath string.
